Update pandoc options

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -1,21 +1,13 @@
-# General Options
 from: markdown
 to: html
 verbosity: ERROR
 log-file: .pandoc.log
-
-# Reader Options
-shift-heading-level-by: 1
-extract-media: build/assets
-metadata:
-  maxwidth: 42em
-  document-css: true
-
-# General Writer Options
 standalone: true
-resource-path: ['assets']
-
-# HTML Specific Writer Options
-css: style.css
-embed-resources: true
+template: template.html
 title-prefix: Joss Appleton-Fox
+embed-resources: true
+resource-path: ['assets']
+css: style.css
+variables:
+  script:
+    - external_link.js
